--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
   "rules": {
     "indent": "off",
     "@typescript-eslint/indent": "off",
-    "@typescript-eslint/no-var-requires": "off"
-    // "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
