--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
