--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "formik": "^2.2.6",
     "global": "^4.4.0",
     "react": "^17.0.1",
     "react-dom": "^16.14.0",
